--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -15,14 +15,22 @@
   </head>
   <body>
     <header>
-      <div class="header-logo-container">
-        <a href="/">
-          <img src="" alt="The Cat Collector Logo" />
-        </a>
+      
+{% load static %}
+
+<div class="header-logo-container">
+  <a href="/">
+    <img src="{% static 'images/header-logo.svg' %}" alt="The Cat Collector Logo" />
+  </a>
+</div>
+
       </div>
       <nav>
         <ul>
-          <li><a href="/about">About</a></li>
+         <li><a href="{% url 'cat-index' %}">All Cats</a></li>
+         <li><a href="{% url 'about' %}">About</a></li>
+
+
         </ul>
       </nav>
     </header>
