--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -29,6 +29,11 @@
         <ul>
          <li><a href="{% url 'cat-index' %}">All Cats</a></li>
          <li><a href="{% url 'about' %}">About</a></li>
+         
+       <li><a href="{% url 'cat-create' %}">Add a Cat</a></li>
+       
+       </ul>
+
 
 
         </ul>
