--- a/main_app/templates/home.html
+++ b/main_app/templates/home.html
@@ -10,12 +10,25 @@
     <img
       src="{% static 'images/splash.svg' %}"
       alt="The Cat Collector Cat"
+       style="width:700px; height:auto; display:block; margin: 0 auto 1rem auto;" 
     />
   </div>
   <img
     src="{% static 'images/logotype.svg' %}"
     alt="Text reads: Cat Collector"
+    style="width:700px; height:auto; display:block; margin: 0 auto 1rem auto;"
   />
 </section>
+
+<footer class="footer">
+  <div class="container">
+    <p>&copy; 2025 Mileiny Nolasco. All rights reserved.</p>
+  </div>
+</footer>
+
+
+
+   
+
 
 {% endblock %}
