--- a/main_app/templates/cats/home.css
+++ b/main_app/templates/cats/home.css
@@ -24,7 +24,7 @@ main > section {
 }
 
 .cat-container {
-  width: 80%;
+  width: 100%;
 }
 
 .login {
@@ -83,4 +83,25 @@ main > section {
   .logo-container {
     max-width: 520px;
   }
+}
+
+footer {
+  background-color: #1c1c1c;
+  color: #fff;
+  font-size: 0.9rem;
+  text-align: center;  /* This centers all text inside the footer */
+}
+
+footer a {
+  color: #ddd;
+  text-decoration: none;
+}
+
+footer a:hover {
+  color: #fff;
+}
+.form-container {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
 }
